double scroll bug fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ html,
 body {
   max-width: 100%;
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: visible;
   overflow-y: visible;
   background: #FBF7EC !important;
   font-weight: 500;
